finished visual logic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knights Travails</title>
-   <script src="./driverscript.js" defer></script>
+   <script src="./driverscript.js" type="module" defer></script>
+   <script src="./knightstravails.js" type="module" defer></script>
 </head>
 <body>
 <div class="maincontainer">
@@ -16,7 +17,7 @@
         <li>
             Pick an ending square!
         </li>
-        <li>Press compute, and the shortest path will be revealed!</li>
+        <li>Press compute, and the shortest path a chess Knight can take will be revealed!</li>
     </ol>
 
     <div class="results">
@@ -24,7 +25,10 @@
         <p class="endsquare">Ending Square is: <p class="endpos"></p></p>
         <br>
         <button class="findpath" disabled>Find Path</button><br>
-        <p>Shortest Path is: </p>
+        <p>Your path is:
+            <p class="pathlist"></p>
+        </p>
+
     </div>
 
 </div>
